2013-06-28  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.9

2013-06-28  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am:
	  - Avoid defining test list twice.
	  - Append $(EXEEXT) where appropriate to appease automake.

2013-06-27  James Hunt  <james.hunt@ubuntu.com>

	* lib/Makefile.am: Added dependency on libtest_util_common.
	* lib/tests/test_libupstart.c: 
	  - Use test_util_common.
	  - test_libupstart():
	    - Start a private D-Bus server and Session Init to handle possibility
	      of building on systems not using Upstart as PID 1.
	    - Ensure XDG_RUNTIME_DIR is available, required for
	      'initctl list-sessions'.
	  - main(): Disable tests if required environment not available (as done
	    for test_initctl).
	* test/test_util_common.c:
	  - wait_for_upstart(): Pass pid of session init to pass to
	    set_upstart_session().
	  - set_upstart_session(): Now accepts a session init pid to allow
	    filtering of sessions and remove limitations of this function.
	* test/test_util_common.h:
	  - REEXEC_UPSTART(): Updated for changed wait_for_upstart() parameter.
	* util/tests/test_initctl.c:
	  - Moved in_chroot() and dbus_configured() to test_util_common.c.

2013-06-26  James Hunt  <james.hunt@ubuntu.com>

	* extra/Makefile.am: Add man pages and conf file.
	* extra/upstart-dbus-bridge.c: Only emit events if any jobs care
	  about them.
	* extra/conf/upstart-dbus-bridge.conf: New configuration file.
	* extra/man/dbus-event.7: New man page.
	* extra/man/upstart-dbus-bridge.8: New man page.
	* extra/upstart-dbus-bridge.c:
	  - Comments and formatting.
	  - main(): Default to an appropriate bus.
	  - signal_filter(): Display signal details when run with --debug.
	* init/log.c: log_clear_unflushed(): Remove log->io assertions as the
	  state cannot be reliably determined when remote_closed is set
	  (LP: #1188642).

2013-06-24  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am: Added missing json file to TEST_DATA_FILES.
