@@ -23,12 +23,25 @@ lib_LTLIBRARIES = libupstart.la
 
 # The library is built from the autogenerated code.
 libupstart_la_SOURCES = upstart.h
+include_HEADERS = $(libupstart_la_SOURCES)
+
+upstartincludedir = $(includedir)/upstart
+
+upstartinclude_HEADERS = \
+	com.ubuntu.Upstart.h \
+	com.ubuntu.Upstart.Instance.h \
+	com.ubuntu.Upstart.Job.h \
+	upstart-dbus.h
+
+upstart-dbus.h: $(top_srcdir)/dbus/upstart.h
+	cp $< $@;
+
 nodist_libupstart_la_SOURCES = \
 	$(com_ubuntu_Upstart_OUTPUTS) \
 	$(com_ubuntu_Upstart_Job_OUTPUTS) \
 	$(com_ubuntu_Upstart_Instance_OUTPUTS)
 
-libupstart_la_LIBADD = 
+libupstart_la_LIBADD = \
 	$(LTLIBINTL) \
 	$(NIH_LIBS) \
 	$(NIH_DBUS_LIBS) \
@@ -148,7 +161,7 @@ CLEANFILES += $(check_SCRIPTS)
 tests: $(check_PROGRAMS)
 
 clean-local:
-	rm -f *.gcno *.gcda
+	rm -f *.gcno *.gcda upstart-dbus.h
 
 maintainer-clean-local:
 	rm -f *.gcov
